Empty VSE preview for scene strips with OpenGL preview + Rendered settings #52050

Closed
opened 2017-07-13 23:19:42 +02:00 by Ivam Pretti · 20 comments

System Information
ubuntu 14.04
AMD Athlon(tm) II X4 630 Processor × 4
Gallium 0.4 on AMD RS780 (DRM 2.43.0 / 4.4.0-83-generic, LLVM 3.8.0)
64-bit
1.7gb ram

Blender Version
Broken: 2.78c e92f235283
Worked: none

Short description of error

Exact steps for others to reproduce the error
create an empty scene and put ate compositor

create in the blender file multiple scenes, each scene with diferente group characters and group props linked after the creation of the composite scene.

if you put the scenes on the sequencer at the first scene (named composite for example) you will see nothing on sequencer view, should be able to see even if you create first, but it only works if you create the composite scene later. so you can not link anything new without deleting and creating a new composite scene.

**System Information** ubuntu 14.04 AMD Athlon(tm) II X4 630 Processor × 4 Gallium 0.4 on AMD RS780 (DRM 2.43.0 / 4.4.0-83-generic, LLVM 3.8.0) 64-bit 1.7gb ram **Blender Version** Broken: 2.78c e92f2352830 Worked: none **Short description of error** **Exact steps for others to reproduce the error** create an empty scene and put ate compositor create in the blender file multiple scenes, each scene with diferente group characters and group props linked after the creation of the composite scene. if you put the scenes on the sequencer at the first scene (named composite for example) you will see nothing on sequencer view, should be able to see even if you create first, but it only works if you create the composite scene later. so you can not link anything new without deleting and creating a new composite scene.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ivampretti

Added subscriber: @ivampretti

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https://developer.blender.org/maniphest/task/edit/form/1/) and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Author

Sorry, but what is missing?

Sorry, but what is missing?
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Please add a blend file that shows the error.

Please add a blend file that shows the error.
Author

did it! I just don know if the attach worked!

did it! I just don know if the attach worked!

Added subscriber: @fablefox

Added subscriber: @fablefox

Hi,

If the attach work there will be a button that let people download the file. An example of a bug report with attached .blender file is here #52149 . Note the err3d.blend

Hi, If the attach work there will be a button that let people download the file. An example of a bug report with attached .blender file is here #52149 . Note the err3d.blend
Author

Link Error.blend

char1.blend
here the attached files

[Link Error.blend](https://archive.blender.org/developer/F685271/Link_Error.blend) [char1.blend](https://archive.blender.org/developer/F685277/char1.blend) here the attached files
Author

same problem with the 2.79 test build Date: 2017-08-01 17:31 Hash:5e9132b3b7d.

At the sequencer view you should see a monkey linked by scenes. Char1.blend is the source file where the monkey is a group and Link Error.blend is a general link file.

same problem with the 2.79 test build Date: 2017-08-01 17:31 Hash:5e9132b3b7d. At the sequencer view you should see a monkey linked by scenes. Char1.blend is the source file where the monkey is a group and Link Error.blend is a general link file.

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42

Thanks for the files…

Only weird thing here (and afaict, totally unrelated to linking) is that, in VSE preview settings, the combination of 'Rendered' preview with 'OpenGL Preview' option enabled gives empty preview.

@Sergey, @ideasman42, do you guys know what should happen in that case?

Thanks for the files… Only weird thing here (and afaict, totally unrelated to linking) is that, in VSE preview settings, the combination of 'Rendered' preview with 'OpenGL Preview' option enabled gives empty preview. @Sergey, @ideasman42, do you guys know what should happen in that case?
Bastien Montagne changed title from Link Problem! to Empty VSE preview for scene strips with OpenGL preview + Rendered settings 2017-08-11 15:01:38 +02:00

@mont29, i'm not sure what is motivation in current code, but think OpenGL Preview is a historical redundancy from times when it was the only option to switch between final render and some shaded mode. Think now we need to remove that option and make internally things behave like:

  • If shading mode is Rendered assume OpenGL Preview option as disabled
  • For other shading mode assume OpenGL Preview option enabled

In the middle of something else now so might sound confusing, but hope you got the idea :)

@mont29, i'm not sure what is motivation in current code, but think OpenGL Preview is a historical redundancy from times when it was the only option to switch between final render and some shaded mode. Think now we need to remove that option and make internally things behave like: - If shading mode is Rendered assume OpenGL Preview option as disabled - For other shading mode assume OpenGL Preview option enabled In the middle of something else now so might sound confusing, but hope you got the idea :)
Bastien Montagne self-assigned this 2017-08-11 17:17:36 +02:00

@Sergey thanks, sounds clear enough to me :)

@Sergey thanks, sounds clear enough to me :)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Guys, at the blender 2.79 rc2 the problema steel remains. The only change was that the sequencer screen got black. Same files sended before, but I alredy tried to remake the files at the rc2 and the problem is the same.

Guys, at the blender 2.79 rc2 the problema steel remains. The only change was that the sequencer screen got black. Same files sended before, but I alredy tried to remake the files at the rc2 and the problem is the same.

@ivampretti since there is no light at all in your scenes added as strips in the VSE… no wonder they render pitch black ;)

@ivampretti since there is no light at all in your scenes added as strips in the VSE… no wonder they render pitch black ;)
Author

Thanks a lot!

Thanks a lot!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52050
No description provided.